--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,3 @@
-/*
- * Custom translucent site header
- */
-
 .site-header {
     background-color: rgba(0, 0, 0, .85);
     -webkit-backdrop-filter: saturate(180%) blur(20px);
@@ -14,4 +10,8 @@
 .site-header a:hover {
     color: #fff;
     text-decoration: none;
+}
+
+nav{
+    margin-bottom: 2%;
 }
