--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,11 +1,9 @@
 .lead{
-    color: red;
+    padding-left: 10%;
 }
-.no-found-picture, .home-quiz-picture{
-    top:0;
-    left:0;
-    transform: none;
-    width: 100%;
-    position: static;
-    margin: 0 auto;
+
+.center-block{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
