--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,76 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+form{
+  width: 80%;
+  margin: 0 auto;
+}
+
+form label{
+  display:block;
+  margin: 0 auto;
+  width: 50%;
+  text-align: center;
+  margin-bottom: 2%;
+}
+
+input.form-control{
+  width: 50%;
+  margin: 0 auto;
+}
+
+textarea.form-control{
+  width: 50%;
+  margin: 0 auto;
+  resize: none;
+  height: 20vh;
+}
+
+a{
+  text-decoration: none;
+}
+
+.btn{
+  width: 25%;
+  margin: 0 auto;
+  color: white;
+}
+
+img{
+  display: block;
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.img{
+  display: block;
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #000;  /* border */
+  background: #FFF;
+  box-shadow: 0 0 0.9rem 0 rgba(0,0,0,0.3);
+}
+
+.img:before {
+  display: block;
+  content: '';
+  padding-top: 100%;
+}
+
+.no-found-picture, .home-quiz-picture{
+  top:0;
+  left:0;
+  transform: none;
+  width: 100%;
+  position: static;
+  margin: 0 auto;
+}
+
+.alreadyUser{
+  margin: 1%;
+}
