--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,9 @@ form{
 
 form label{
   display:block;
-  margin: 0 auto;
   width: 50%;
   text-align: center;
-  margin-bottom: 2%;
+  margin: 0 auto 2%;
 }
 
 input.form-control{
