--- a/src/index.css
+++ b/src/index.css
@@ -77,3 +77,42 @@ a{
 .alreadyUser{
   margin: 1%;
 }
+
+.QA-container {
+  position: relative;
+  max-width: 1000px;
+  margin: 0 auto;
+  background: #fff;
+  border-radius: 3px;
+}
+
+.fade-enter {
+  opacity: 0;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out 0.3s;
+}
+
+.fade-leave {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: 1;
+}
+
+.fade-leave.fade-leave-active {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.fade-appear {
+  opacity: 0;
+}
+
+.fade-appear.fade-appear-active {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+}
